@@ -1,3 +1,7 @@
+2002-10-27 Damien Sandras  <dsandras@seconix.com>
+
+	* src/ils.cpp, src/druid.cpp: Fixed #96653.
+	
 2002-10-20 Damien Sandras  <dsandras@seconix.com>
 
 	* src/gdkvideoio.cpp: Changed misplaced #endif.
